======================= Version 1.2 ===========================================
2013-11-7:
  * Added bits.

2013-8-7: 
  * Added sparse matrix handling for howbig().

======================= Version 1.1 ===========================================
2013-8-6:
  * Cleaned up the docs.

2013-8-5:
  * Added howbig.par().
  * Added better print handling of approximate returns.

2013-8-4:
  * Enhanced the vignette.
  * Added vignette cover.

2013-8-3:
  * Method "object.size()" now returns memuse objects.

2013-8-2:
  * Added approximate sizes for howmany() output.
  * Made internals more consistent.
  * Better internal documentation.

2013-7-17:
  * Fixed title.

======================= Log Before Release ====================================
2013-7-16:
  * Finishing touches for CRAN.
  * Expanded package demos.

2013-7-10:
  * Added interoperability with object_size objects.

2013-7-6:
  * Fixed constructor bug.
  * Finished howbig.par().

2013-6-15:
  * Expanded vignette.
  * Finished expanded howbig() and howmany().

2013-5-23:
  * The joke got tastelessly out of hand.

2013-5-19:
  * Started with a 10 line function that was more than sufficient.