@@ -1,20 +1,0 @@
-#! /bin/sh
-
-rm -rf ./chm
-rm -rf ./config.*
-rm -rf ./autom4te.cache
-rm -rf ./src/Makevars
-rm -rf ./src/Makedeps
-rm -rf ./src/Makeconf
-rm -rf ./src/*.dylib
-rm -rf ./src/*.so
-rm -rf ./src/*.o
-rm -rf ./src/*.d
-rm -rf ./src/*.dll
-rm -rf ./src/*.a
-rm -rf ./src/*.rc
-rm -rf ./src/*.rds
-rm -rf ./src/export_blacs/*.o
-rm -rf ./src/secret/*.o
-rm -rf ./src-*
-rm -rf ./inst/etc*
