@@ -5,7 +5,7 @@ rm *.aux *.bbl *.blg *.log *.out *.toc
 pdflatex memuse-guide.Rnw
 pdflatex memuse-guide.Rnw
 
-Rscript -e "tools::compactPDF('.', gs_quality='ebook')"
+Rscript -e "tools::compactPDF('memuse-guide.pdf', gs_quality='ebook')"
 
 rm *.aux *.bbl *.blg *.log *.out *.toc *.dvi
 
