@@ -1,4 +1,13 @@
-======================= Version 1.2 ===========================================
+======================= Version 2.0 ===========================================
+2014-3-17:
+  * Added as.character() method.
+
+2014-2-15:
+  * Fixed approx_size() bug.
+
+2014-1-4:
+  * License change.
+
 2013-11-7:
   * Added bits.
 
